[package]
name = "ip-epa127"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vhost"
path = "src/bin/vhost.rs"

[[bin]]
name = "vrouter"
path = "src/bin/vrouter.rs"

[dependencies]
bitflags = "2.6.0"
chrono = "0.4.38"
etherparse = "0.16"
ipnet = "2.10.1"
rand = "0.8.5"
rustyline = "14.0.0"
thiserror = "2.0.0"
